layout, alignment fixed; last update data added

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ h1 {
 
 h3,h4 {
     font-family: 'Overpass', sans-serif;
+    text-transform: uppercase;
    
    
 
@@ -33,18 +34,12 @@ h3,h4 {
 }
 
 
-.row{
-    justify-content: center;
-   
-    
-}
-
 body{
     background-image: url('images/dollar.jpg');
 }
 
 input {
-    height: 4rem;
+    height: 3rem;
     border-width: 1px;
     border-color: #17a2b8;
     border-radius: 5px;
@@ -58,13 +53,13 @@ input {
 }
 
 #BtnDiv {
-    margin-top: 7rem;
+    margin-top: 4rem;
+    justify-content: center;
 }
 
-#info {
-    background: rgba(255, 255, 255, 0.8);
-    height: 5rem;
-    position: fixed;
-   
-    
+#updateTime{
+   color: #17a2b8;
+   font-size: 1rem;
+   font-weight:normal;
+   font-family: 'Overpass', sans-serif;
 }
